--- a/app/src/main/res/layout/activity_files.xml
+++ b/app/src/main/res/layout/activity_files.xml
@@ -108,5 +108,14 @@
         app:layout_constraintEnd_toStartOf="@+id/add_file"
         app:layout_constraintTop_toTopOf="@+id/add_file" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
