--- a/app/src/main/res/layout/list_archivo.xml
+++ b/app/src/main/res/layout/list_archivo.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/archivo"
@@ -81,19 +81,17 @@
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/floatingActionButton"
-                    android:layout_width="match_parent"
+                    android:layout_width="96dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginStart="70dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginRight="6dp"
-                    android:layout_toEndOf="@+id/linearLayout"
                     android:clickable="true"
+                    android:focusable="true"
                     app:backgroundTint="@android:color/holo_green_light"
-                    app:srcCompat="@drawable/ic_action_edit"
-                    android:focusable="true" />
+                    app:srcCompat="@drawable/ic_action_edit" />
 
             </RelativeLayout>
         </LinearLayout>
