--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textFireBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
@@ -32,23 +32,23 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="36sp"
         android:textStyle="bold|italic"
-        app:layout_constraintBottom_toTopOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintBottom_toTopOf="@+id/firebox"
+        app:layout_constraintEnd_toEndOf="@+id/firebox"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="@+id/firebox"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="296dp"
-        android:layout_height="379dp"
+        android:id="@+id/firebox"
+        android:layout_width="324dp"
+        android:layout_height="403dp"
         android:layout_marginBottom="24dp"
+        android:contentDescription="@string/todo"
         app:layout_constraintBottom_toTopOf="@+id/buttonIniciaSesion"
         app:layout_constraintEnd_toEndOf="@+id/buttonIniciaSesion"
         app:layout_constraintStart_toStartOf="@+id/buttonIniciaSesion"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.803"
-        app:srcCompat="@drawable/firebox"
-        android:contentDescription="@string/todo" />
+        app:srcCompat="@drawable/firebox" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
