--- a/app/src/main/res/layout/list_archivo.xml
+++ b/app/src/main/res/layout/list_archivo.xml
@@ -36,11 +36,11 @@
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center"
                     android:paddingLeft="14dp"
-                    android:paddingRight="14dp"></ImageView>
+                    android:paddingRight="14dp"
+                    android:contentDescription="@string/todo"></ImageView>
 
                 <LinearLayout
                     android:id="@+id/linearLayout"
@@ -48,10 +48,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_marginStart="8dp"
-                    android:layout_marginLeft="4dp"
                     android:layout_marginTop="2dp"
                     android:layout_toEndOf="@+id/iconArchivo"
-                    android:layout_toRightOf="@+id/iconArchivo"
                     android:orientation="vertical">
 
                     <TextView
@@ -59,7 +57,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="2dp"
-                        android:text="Design Tutorial.mp4"
+                        android:text="@string/design_tutorial_mp4"
                         android:textColor="@color/black"
                         android:textSize="20sp"></TextView>
 
@@ -67,14 +65,14 @@
                         android:id="@+id/durationArchivo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Duration"
+                        android:text="@string/duration"
                         android:textSize="19sp"></TextView>
 
                     <TextView
                         android:id="@+id/sizeArchivo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Size"
+                        android:text="@string/size"
                         android:textSize="19sp"></TextView>
 
                 </LinearLayout>
@@ -84,14 +82,13 @@
                     android:layout_width="96dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="10dp"
-                    android:layout_marginRight="6dp"
                     android:clickable="true"
                     android:focusable="true"
                     app:backgroundTint="@android:color/holo_green_light"
-                    app:srcCompat="@drawable/ic_action_edit" />
+                    app:srcCompat="@drawable/ic_action_edit"
+                    android:contentDescription="@string/todo" />
 
             </RelativeLayout>
         </LinearLayout>
